real time solve counter

--- a/index.html
+++ b/index.html
@@ -673,11 +673,10 @@
             <div class="modal-row">
                 <div id="pWin" style="display: none;">
                     <p>आपने <span id="moveCount1">0</span> चाल में सुलझा लिया!</p>
-                    <div id="winSteps">
-                    </div>
                 </div>
                 <p id="pPlay">अब तक <span id="moveCount2">0</span> चालें हो गई हैं!</p>
-            </div>
+                <div id="winSteps"></div>
+        </div>
             <hr size="1" />
             <div class="model-row">
                 <div class="countdown">
