--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <i class="fas fa-question-circle"></i>
             </div>
         </div>
-        <div><a class="title" href="index.html"><span id="gridSize">3x3</span>&nbsp;हिन्दी शब्द रचना</a></div>
+        <div class="title-container"><a class="title" href="index.html"><span id="gridSize">3x3</span>&nbsp;हिन्दी शब्द
+                रचना</a></div>
         <div class="right-section">
             <div id="divStats" onclick="showWinModal()"> <svg xmlns="http://www.w3.org/2000/svg" height="24"
                     viewBox="0 0 24 24" width="24">
@@ -121,10 +122,10 @@
 
     <div class="content">
         <div class="grid-container" id="grid"></div>
-        <div class="text-center mt-3 button-container" style="vertical-align: middle;">
+        <div class="text-center mt-3 button-container " style="vertical-align: middle;">
             <span style="margin: auto;">Steps:&nbsp;<span id="movesCounter">0</span></span>
-            <div id="divMindCheck" class="toggle-container2">
-                <span>विकल्प जाँच&nbsp;</span>
+            <div id="divMindCheck" class="toggle-container2 options-container">
+                <span style="margin: auto;">विकल्प जाँच&nbsp;</span>
                 <label class="switch">
                     <input type="checkbox" id="mindCheckToggle" onchange="toggleMindCheck()">
                     <span class="slider"></span>
@@ -169,7 +170,7 @@
                 </div>
                 <p id="pPlay">अब तक <span id="moveCount2">0</span> चालें हो गई हैं!</p>
                 <div id="winSteps" style="padding-left: 20px;"></div>
-        </div>
+            </div>
             <hr size="1" />
             <div class="model-row">
                 <div class="countdown">
