--- a/clean.html
+++ b/clean.html
@@ -25,6 +25,9 @@
             window.localStorage.setItem('orgGrid3', '');
             window.localStorage.setItem('orgGrid4', '');
 
+            window.localStorage.setItem('solveGrid3', '');
+            window.localStorage.setItem('solveGrid4', '');
+
         }
         </script>
 </body>
