--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="content">
         <div class="grid-container" id="grid"></div>
         <div class="text-center mt-3 button-container " style="vertical-align: middle;">
-            <span style="margin: auto;">Steps:&nbsp;<span id="movesCounter">0</span></span>
+            <span style="margin: auto;">चाल:&nbsp;<span id="movesCounter">0</span></span>
             <div id="divMindCheck" class="toggle-container2 options-container">
                 <span style="margin: auto;">विकल्प जाँच&nbsp;</span>
                 <label class="switch">
