--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
                 </label>
             </div>
         </div>
+        <div class="text-center mt-3 " style="vertical-align: middle;">
+            <span id="adminText" style="margin: auto; display: none;"></span>
+        </div>
     </div>
 
     <!-- Add this HTML to your page -->
@@ -177,15 +180,19 @@
                     नए शब्द: <span id="countdownTimer">00:00:00</span>
                 </div>
                 <div style="min-width: 50%; padding-left: 10px; margin: auto;" id="rowShare">
-                    <button class="share-button" style="width: 90%;" id="btnShare" onclick="shareResult()">
+                    <button class="share-button" style="width: 80%;" id="btnShare" onclick="shareResult()">
                         साझा करें
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
+                            <path fill=""
+                                d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92c0-1.61-1.31-2.92-2.92-2.92zM18 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM6 13c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm12 7.02c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z" />
+                        </svg>
                     </button>
                 </div>
             </div>
         </div>
     </div>
     <footer class="footer">
-        <p>&copy; 2024 Manish Pandey. All rights reserved.</p>
+        <p>&copy; 2024 <a href="https://games.hindipremi.com/">Hindi Premi</a>. All rights reserved.</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="wordbank.js"></script>
