Link to main page added

--- a/admin.html
+++ b/admin.html
@@ -71,6 +71,7 @@
             <button onclick="removeKey()" style="display: none;">Remove This Key</button>
             <button id="btnAdminFlag" class="toggle-button" onclick="toggleAdminFlag()">Toggle Admin Flag</button>
         </div>
+        <div><span>You can play the game again: <a href="index.html">Click Here</a></span></div>
     </div>
 
     <script>
