--- a/clean.html
+++ b/clean.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LocalStorage Manager</title>
+    <title>Hindi Words Foundation - Game Data Page</title>
     <style>
         .storage-item {
             margin: 5px 0;
@@ -58,7 +58,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>LocalStorage Items</h2>
+            <h2>Game Data Admin Page</h2>
             <div class="select-all-container">
                 <input type="checkbox" id="select-all" onchange="toggleSelectAll()">
                 <label for="select-all">Select All</label>
@@ -67,6 +67,7 @@
         <div id="storage-list"></div>
         <button class="remove-btn" onclick="removeSelected()">Remove Selected Items</button>
     </div>
+    <div><span>You can play the game again: <a href="index.html">Click Here</a></span></div>
 
     <script>
         function displayStorageItems() {
