--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <ul>
                     <li><a href="https://kavishavi.github.io/hinglishwordle/" target="_blank">Hindi Wordle - By Rahul
                             Upadhyaya</a></li>
-                    <li><a href="https://tomanishp.github.io/matrix" target="_blank">Classic 4x4 Grid Puzzle</a></li>
-                    <li><a href="https://tomanishp.github.io/hindimatra" target="_blank">Hindi Matra Checking Tool</a>
+                    <li><a href="https://games.hindipremi.com/slider" target="_blank">Classic 4x4 Slider Puzzle</a></li>
+                    <li><a href="https://tools.hindipremi.com/matra" target="_blank">Hindi Matra Checking Tool</a>
                     </li>
                 </ul>
             </div>
@@ -136,8 +136,7 @@
             <span id="adminText" style="margin: auto; display: none;"></span>
         </div>
     </div>
-
-    <!-- Add this HTML to your page -->
+    
     <div id="winModal" class="modal-overlay">
         <div class="modal-content">
             <span class="close-modal" onclick="closeWinModal()">×</span>
