Index error solved

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta http-equiv="refresh" content="43000">
     <title>Hindi Words Formation - हिन्दी शब्द रचना</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="title-container"><a class="title" href="index.html"><span id="gridSize">3x3</span>&nbsp;हिन्दी शब्द
-                रचना</a></div>
+                रचना <span id="totalDays"></span></a></div>
         <div class="right-section">
             <div id="divStats" onclick="showWinModal()"> <svg xmlns="http://www.w3.org/2000/svg" height="24"
                     viewBox="0 0 24 24" width="24">
