--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
         <p>&copy; 2024 <a href="https://games.hindipremi.com/">Hindi Premi</a>. All rights reserved.</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="wordbank.js"></script>
-    <script src="grid-handler.js"></script>
-    <script src="index.js"></script>
+    <script src="wordbank.min.js"></script>
+    <script src="grid-handler.min.js"></script>
+    <script src="index.min.js"></script>
 </body>
 
 </html>
